# spacething

./: CMakeLists.txt  README.md
cmake/: android.cmake  linux.cmake  msvc.cmake  openssl.cmake  osx.cmake  sfml.cmake  win32.cmake
src/app/: CMakeLists.txt  app.cpp  game_screen.cpp  game_screen.h  intro_screen.cpp  intro_screen.h
src/core/: CMakeLists.txt  core.cpp  core.h  defs.h  screen.h
